# Tomb1Main

./: CMakeLists.txt  CMakeSettings.json  Makefile
cmake/: ExternalDependencies.cmake  build.sh
src/game/: camera.c  control.c  lara.c  larafire.c  larasurf.c  types.h  vars.h
src/gfx/gl/: program.c
src/json/: bson_parse.c
src/specific/: input.c  s_output.c
